fix: properly align notifications text on the left

--- a/cinnamon/cinnamon.css
+++ b/cinnamon/cinnamon.css
@@ -2585,6 +2585,13 @@ https://github.com/linuxmint/cinnamon-spices-applets
   font-weight: bold;
 }
 
+/* ===================================================================
+* Notifications
+* ===================================================================*/
+
+#notification {
+  text-align: left;
+}
 
 /* ===================================================================
 * Run dialog
